<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <!-- Ilustrasi -->
    <ImageView
        android:id="@+id/illustration"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/illustration"
        android:src="@drawable/ic_onboarding1" />

    <!-- Judul -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryText"
        android:fontFamily="@font/nunitosansbold" />

    <!-- Deskripsi -->
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/description"
        android:textSize="14sp"
        android:textColor="@color/colorSecondaryText"
        android:fontFamily="@font/nunitosansregular"
        android:gravity="center" />

</LinearLayout>
